# PrismEngine

./: .clang-format  .gitattributes  .gitignore  Build.lua  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg-configuration.json  vcpkg.json
PrismCore/: CMakeLists.txt
PrismCore/shaders/: BRDF.hlsli  DeferredBasePass.hlsl  DeferredLightingDirect.hlsl  DeferredLightingIndirect.hlsl  DiffuseIrradianceIntegration.hlsl  EquirectToCubemap.hlsl  FinalComposition.hlsl  FullscreenTriangleVertexShader.hlsli  GenerateMips.hlsli  GenerateMipsGamma.hlsl  GenerateMipsGammaOddX.hlsl  GenerateMipsGammaOddXY.hlsl  GenerateMipsGammaOddY.hlsl  GenerateMipsLinear.hlsl  GenerateMipsLinearOddX.hlsl  GenerateMipsLinearOddXY.hlsl  GenerateMipsLinearOddY.hlsl  HitProxy.hlsl  JumpFloodOutline.hlsl  ShadowMap.hlsl  Skybox.hlsl  SpecularIrradianceIntegration.hlsl
PrismCore/src/: pcpch.h
PrismCore/src/Platform/SDL/: SDLPlatform.cpp  SDLPlatform.h  SDLResourceCreation.cpp  SDLTypeConversions.h  SDLWindow.cpp  SDLWindow.h
PrismCore/src/Prism/AssetManagement/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  AssetType.cpp  AssetType.h  MeshAsset.cpp  MeshAsset.h  TextureAsset.cpp  TextureAsset.h
PrismCore/src/Prism/Base/: AppEvents.h  Application.cpp  Application.h  Assert.h  Base.h  CommonTypes.h  Entry.cpp  KeyCode.h  Logging.cpp  Logging.h  Paths.cpp  Paths.h  Platform.cpp  Platform.h  PlatformResourceCreation.h  Ref.cpp  Ref.h  Scene.cpp  Scene.h  Window.cpp  Window.h
PrismCore/src/Prism/Render/: Buffer.cpp  Buffer.h  BufferView.cpp  BufferView.h  Camera.cpp  Camera.h  DeferredCommandRecorder.cpp  DeferredCommandRecorder.h  EntityRenderProxy.cpp  EntityRenderProxy.h  Layer.h  Material.cpp  Material.h  PipelineState.cpp  PipelineState.h  PipelineStateCache.cpp  PipelineStateCache.h  Primitive.cpp  Primitive.h  PrimitiveBatch.cpp  PrimitiveBatch.h  PrismImGui.h  ReleaseQueue.h  RenderCommandList.cpp  RenderCommandList.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderCommands.h  RenderConstants.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderResource.cpp  RenderResource.h  RenderResourceCreation.h  RenderResourceView.cpp  RenderResourceView.h  RenderResourceViewCache.cpp  RenderResourceViewCache.h  (+23 more)
PrismCore/src/Prism/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  LightRendererComponent.cpp  LightRendererComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  PBRMeshRendererComponent.cpp  PBRMeshRendererComponent.h  Scene.cpp  Scene.h  SceneRenderPipeline.cpp  SceneRenderPipeline.h
PrismCore/src/Prism/UI/: PrismImGui.cpp  PrismImGui.h  PrismImGuiConfig.h
PrismCore/src/Prism/Utilities/: Duration.cpp  Duration.h  Instrumentation.cpp  Instrumentation.h  LazySingleton.h  MathUtils.h  MeshLoading.cpp  MeshLoading.h  MeshUtils.cpp  MeshUtils.h  PreprocessorUtils.h  PreservingObjectContainer.h  ScopeExit.h
PrismCore/src/RenderAPI/D3D12/: D3D12Base.h  D3D12Buffer.cpp  D3D12Buffer.h  D3D12BufferView.cpp  D3D12BufferView.h  D3D12DescriptorHeapManager.cpp  D3D12DescriptorHeapManager.h  D3D12DynamicBufferAllocator.cpp  D3D12DynamicBufferAllocator.h  D3D12DynamicGPURingBuffer.cpp  D3D12DynamicGPURingBuffer.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12PrismImGui.cpp  (+25 more)
Sandbox/: CMakeLists.txt  RunSandbox-Debug.bat  imgui.ini
Sandbox/assets/: BlackWhiteTestEqui.hdr  Monkey.gltf  MonkeySmooth.gltf  tief_etz_4k.hdr
Sandbox/meshes/: Cube.fbx  Floor.fbx  Monkey.fbx  Sphere.gltf
Sandbox/meshes/Bistro/: Bistro.gltf
Sandbox/shaders/: BRDF.hlsli  BRDFIntegration.hlsl  Basic.hlsl  Bloom.hlsl  Common.hlsli  DeferredBasePass.hlsl  DeferredLightingDirect.hlsl  DeferredLightingIndirect.hlsl  DiffuseIrradianceIntegration.hlsl  EquirectToCubemap.hlsl  FinalComposite.hlsl  FinalComposition.hlsl  PBR.hlsl  ShadowMap.hlsl  Skybox.hlsl  SpecularIrradianceIntegration.hlsl
Sandbox/src/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  EditorApplication.cpp  EditorApplication.h  EditorTheme.cpp  EditorTheme.h  Sandbox.cpp  Sandbox.h
Sandbox/textures/: rostock_laage_airport_4k.hdr
(+185 files in other folders)
